Fix initialization of the fontconfig embedded into AppImage

Since we embed our own fontconfig into the appimage we should make sure
that it fetches the corrent fonts.conf file from the system location.

BUG:473161